test/errors/invalid_notify_settings.ecsact
package error.invalid_notify_settings;

component ExampleComponent {
	i32 num;
}

system InvalidNotifySetting {
  readwrite ExampleComponent;

  notify blah;
}
